WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
172006
[macOS] REGRESSION: Drag images for links with right-to-left titles are incorrect
https://bugs.webkit.org/show_bug.cgi?id=172006
Summary
[macOS] REGRESSION: Drag images for links with right-to-left titles are incor...
mitz
Reported
2017-05-11 18:09:54 PDT
The drag image for a link whose title runs right-to-left is wrong: truncation happens at the wrong place, and when there are two lines, alignment is wrong.
Attachments
Patch
(11.05 KB, patch)
2017-05-16 17:14 PDT
,
Tim Horton
dino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2017-05-12 14:49:28 PDT
<
rdar://problem/32165137
>
Tim Horton
Comment 2
2017-05-16 17:14:42 PDT
Created
attachment 310322
[details]
Patch
Dean Jackson
Comment 3
2017-05-16 17:43:18 PDT
Comment on
attachment 310322
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=310322&action=review
Where are the tests?
> Source/WebCore/platform/mac/DragImageMac.mm:219 > + CTParagraphStyleSetting paragraphStyleSettings[1];
Should paragraphStyleSettings be captured?
Dean Jackson
Comment 4
2017-05-16 17:47:00 PDT
Comment on
attachment 310322
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=310322&action=review
>> Source/WebCore/platform/mac/DragImageMac.mm:219 >> + CTParagraphStyleSetting paragraphStyleSettings[1]; > > Should paragraphStyleSettings be captured?
Ignore this.
Tim Horton
Comment 5
2017-05-16 17:54:14 PDT
http://trac.webkit.org/changeset/216962/webkit
Consider it ignored. Thank you!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug