[macOS] REGRESSION: Drag images for links with right-to-left titles are incorrect (172006) https://bugs.webkit.org/show_bug.cgi?id=172006 <rdar://problem/32165137>

Reviewed by Dean Jackson.

* platform/mac/DragImageMac.mm:
(WebCore::LinkImageLayout::LinkImageLayout):
(WebCore::createDragImageForLink):
(WebCore::LinkImageLayout::addLine): Deleted.
* platform/spi/cocoa/CoreTextSPI.h:
Set and paint the entire frame as a single unit, making use of the
CTFrameMaximumNumberOfLines attribute to limit the number of lines.
This gives CoreText power over text alignment and makes RTL text lay
out correctly.


Canonical link: https://commits.webkit.org/189127@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216962 268f45cc-cd09-0410-ab3c-d52691b4dbfc